version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandElementType.rst.txt
.. vale off



:class:`CommandElementType`
===========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementType(iElementType: Ansys.Common.Interop.FEParsePlugin_ANSYS.IAnsysElementType)

   Bases: :py:obj:`object`


   
   Represents an element type associated to an ETBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandElementType

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Ename`
            - Gets the element name.
          * - :py:attr:`~Id`
            - Gets the element number.
          * - :py:attr:`~Keyopts`
            - Gets the key options.







Property detail
---------------
.. py:property:: Ename
   :type: Optional[int]


   
   Gets the element name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Id
   :type: Optional[int]


   
   Gets the element number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Keyopts
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandKeyOpt]]


   
   Gets the key options.
















   ..
       !! processed by numpydoc !!







.. vale on